fix(accordion): vertically center align items in heading

--- a/src/components/Accordion/_index.scss
+++ b/src/components/Accordion/_index.scss
@@ -29,6 +29,10 @@
       }
     }
 
+    &__heading {
+      align-items: center;
+    }
+
     &__item--active &__title {
       font-weight: 600;
     }
